feat: 그래프 아이콘 클릭시 통화 그래프 보여주기
#5

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".CountrySelectionActivity" />
+        <activity android:name=".GraphActivity" />
     </application>
 
 </manifest>
